# math_modeling

./: CMakeLists.txt  comparison_between_doubles.h  extra_functions_for_course_work.cpp  extra_functions_for_course_work.h  finding_x2_and_x3.cpp  finding_x2_and_x3.h  main.cpp  solving_cubic_equation.cpp  solving_cubic_equation.h  system_of_equations.cpp  system_of_equations.h  zeroin.cpp  zeroin.h
